--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,197 +8,232 @@
     tools:context=".fragment.ProfileFragment">
 
     <RelativeLayout
-        android:id="@+id/Rl2"
         android:layout_width="match_parent"
-        android:layout_height="270dp"
-        android:layout_marginStart="-100dp"
-        android:layout_marginEnd="-100dp"
-        android:background="@drawable/radius">
+        android:layout_height="match_parent">
 
-        <LinearLayout
-            android:layout_width="100dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="370dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/button"
-            android:id="@+id/LLlogout"
-            android:gravity="center"
-            android:orientation="horizontal">
+        <RelativeLayout
+            android:id="@+id/Rl2"
+            android:layout_width="match_parent"
+            android:layout_height="270dp"
+            android:layout_marginStart="-100dp"
+            android:layout_marginEnd="-100dp"
+            android:background="@drawable/radius">
 
-            <ImageView
-                android:id="@+id/imageView3"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/LLlogout"
+                android:layout_width="110dp"
+                android:layout_height="50dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginEnd="110dp"
+                android:layout_marginTop="20dp"
+                app:cardCornerRadius="20dp"
+                app:cardBackgroundColor="#f6f8fa"
+                android:foreground="?attr/selectableItemBackgroundBorderless"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_gravity="center_vertical"
+                    android:src="@drawable/ic_logout" />
+
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="50dp"
+                    android:layout_gravity="center_vertical"
+                    android:text="Logout"
+                    android:textColor="@color/red" />
+            </androidx.cardview.widget.CardView>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_logout" />
+                android:layout_marginLeft="120dp"
+                android:layout_marginTop="30dp"
+                android:gravity="center"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:textColor="@color/black"
-                android:text="Logout" />
-        </LinearLayout>
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/ivprofilepic"
+                    android:layout_width="130dp"
+                    android:layout_height="130dp"
+                    android:src="@drawable/dpdefault"
+                    app:civ_border_color="@color/white"
+                    app:civ_border_width="0dp" />
 
-        <LinearLayout
+                <TextView
+                    android:id="@+id/tvProfileUsername"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/ivprofilepic"
+                    android:layout_marginTop="10dp"
+                    android:text="Username"
+                    android:textColor="@color/white"
+                    android:textSize="21sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/rlAwards"
+            android:layout_width="match_parent"
+            android:layout_height="140dp"
+            android:layout_below="@+id/Rl2"
+            android:gravity="center">
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/LL2"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginRight="18dp"
+                android:layout_toStartOf="@+id/LL1"
+                android:gravity="center"
+                app:cardCornerRadius="90dp">
+
+                <TextView
+                    android:id="@+id/tv2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="-10dp"
+                    android:text="60"
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tvName2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:text="Squats"
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/LL1"
+                android:layout_width="110dp"
+                android:layout_height="110dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/circle"
+                android:gravity="center"
+                app:cardCornerRadius="90dp">
+
+                <TextView
+                    android:id="@+id/tv1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="-10dp"
+                    android:text="100"
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tvName1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:text="Sit Ups"
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/LL3"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_marginLeft="18dp"
+                android:layout_toEndOf="@+id/LL1"
+                android:gravity="center"
+                app:cardCornerRadius="90dp">
+
+                <TextView
+                    android:id="@+id/tv3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="-10dp"
+                    android:text="40"
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tvName3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:text="Push Ups"
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
+            </androidx.cardview.widget.CardView>
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/tvHistory"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginLeft="120dp"
-            android:layout_marginTop="30dp"
-            android:gravity="center">
+            android:layout_below="@+id/rlAwards"
+            android:layout_marginLeft="10dp"
+            android:text="HISTORY"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            android:textStyle="bold" />
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/ivprofilepic"
-                android:layout_width="130dp"
-                android:layout_height="130dp"
-                android:src="@drawable/dpdefault"
-                app:civ_border_color="@color/white"
-                app:civ_border_width="0dp" />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvHistory"
+                android:layout_width="match_parent"
+                android:layout_height="270dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="3dp"
+                android:background="@drawable/background_edit_text"
+                android:layout_below="@+id/tvHistory"
+                android:padding="8dp" />
 
+        <androidx.cardview.widget.CardView
+            android:id="@+id/clearData"
+            android:layout_centerHorizontal="true"
+            android:layout_width="380dp"
+            android:layout_height="50dp"
+            app:cardCornerRadius="30dp"
+            android:layout_below="@+id/rvHistory"
+            android:layout_marginTop="10dp"
+            android:foreground="?attr/selectableItemBackgroundBorderless"
+            app:cardBackgroundColor="#f6f8fa">
             <TextView
-                android:id="@+id/tvProfileUsername"
+                android:layout_gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/ivprofilepic"
-                android:text="Username"
-                android:textColor="@color/white"
-                android:textSize="21sp"
-                android:layout_marginTop="10dp"
-                android:textStyle="bold" />
-        </LinearLayout>
+                android:textColor="@color/red"
+                android:text="Clear all data"/>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/deleteAccount"
+            android:layout_centerHorizontal="true"
+            android:layout_width="380dp"
+            android:layout_height="50dp"
+            android:layout_below="@+id/clearData"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="15dp"
+            android:foreground="?attr/selectableItemBackgroundBorderless"
+            app:cardCornerRadius="30dp"
+            app:cardBackgroundColor="@color/red">
+            <TextView
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="DELETE ACCOUNT"
+                android:textColor="@color/white"/>
+        </androidx.cardview.widget.CardView>
+
     </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/rlAwards"
-        android:layout_width="match_parent"
-        android:layout_height="140dp"
-        android:layout_below="@+id/Rl2"
-        android:gravity="center">
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/LL2"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginRight="18dp"
-            android:layout_toStartOf="@+id/LL1"
-            app:cardCornerRadius="90dp"
-            android:gravity="center">
-
-            <TextView
-                android:id="@+id/tv2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="60"
-                android:layout_gravity="center"
-                android:layout_marginTop="-10dp"
-                android:textStyle="bold"
-                android:textColor="@color/black" />
-
-            <TextView
-                android:id="@+id/tvName2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Squats"
-                android:layout_gravity="center"
-                android:textStyle="bold"
-                android:textColor="@color/black" />
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/LL1"
-            android:layout_width="110dp"
-            android:layout_height="110dp"
-            android:layout_marginTop="20dp"
-            app:cardCornerRadius="90dp"
-            android:background="@drawable/circle"
-            android:gravity="center">
-
-            <TextView
-                android:id="@+id/tv1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="100"
-                android:layout_gravity="center"
-                android:layout_marginTop="-10dp"
-                android:textStyle="bold"
-                android:textColor="@color/black" />
-
-            <TextView
-                android:id="@+id/tvName1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Sit Ups"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"
-                android:textStyle="bold"
-                android:textColor="@color/black" />
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/LL3"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_toEndOf="@+id/LL1"
-            android:layout_marginLeft="18dp"
-            app:cardCornerRadius="90dp"
-            android:gravity="center">
-
-            <TextView
-                android:id="@+id/tv3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="40"
-                android:layout_gravity="center"
-                android:layout_marginTop="-10dp"
-                android:textStyle="bold"
-                android:textColor="@color/black" />
-
-            <TextView
-                android:id="@+id/tvName3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"
-                android:text="Push Ups"
-                android:textStyle="bold"
-                android:textColor="@color/black" />
-        </androidx.cardview.widget.CardView>
-    </RelativeLayout>
-
-    <TextView
-        android:id="@+id/tvHistory"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="HISTORY"
-        android:layout_below="@+id/rlAwards"
-        android:textColor="@color/black"
-        android:textSize="20dp"
-        android:layout_marginLeft="10dp"
-        android:textStyle="bold"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/tvHistory">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvHistory"
-            android:layout_width="match_parent"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginBottom="3dp"
-            android:padding="8dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/background_edit_text" />
-    </LinearLayout>
-
-
-
-
-
-
-
-
-</RelativeLayout>
+</ScrollView>
