--- a/app/src/main/res/layout/fragment_situps_counter.xml
+++ b/app/src/main/res/layout/fragment_situps_counter.xml
@@ -15,6 +15,17 @@
         android:layout_marginTop="200dp"
         android:layout_centerHorizontal="true"/>
 
+    <Button
+        android:id="@+id/btnSitupsCounter"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:text="TAP"
+        android:textSize="40dp"
+        android:layout_below="@+id/tvNoOfSitups"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/circle"
+        android:layout_marginTop="100dp"/>
+
     <androidx.cardview.widget.CardView
         android:id="@+id/situpsCounterDoneBtn"
         android:layout_width="wrap_content"
